--- a/tienda/aros/css/estilos.css
+++ b/tienda/aros/css/estilos.css
@@ -18,6 +18,7 @@ body {
 		background-position: -10000px 5000px;
 	}
 }
+
 .estrellas {
 	position: absolute;
 	height: 100%;
@@ -27,4 +28,33 @@ body {
 		top center;
 	z-index: 1;
 	animation: move-twink-back 200s linear infinite;
+}
+
+img{
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+}
+
+
+input{
+	display:block;
+}
+
+.ingreso1, .ingreso2{
+		width: 400px;
+		margin:auto;
+
+}
+
+.agregar {
+	margin:auto;
+}
+
+.listado{
+	margin:100px;
+}
+
+h3, p, b{
+	color: white;
 }
